--- a/AppMaterias/templates/AppMaterias/Avatar/agregarAvatar.html
+++ b/AppMaterias/templates/AppMaterias/Avatar/agregarAvatar.html
@@ -1,21 +1,21 @@
 {% extends 'AppMaterias/padre.html' %}
 
 {% block head %}
-    <title>Añadir materias</title>
+    <title>Agregar Avatares</title>
 {% endblock head %}
 
 {% block body %}
-    <h1>En esta sección vas a poder agregar las materias aprobadas.</h1>
+    <h1>En esta sección puedes agregar Avatares.</h1>
 
 {% endblock body %}
 
 {% block reseñas %}
 
-<form action="" method="POST">  {% csrf_token %}
+<form action="" enctype="multipart/form-data" method="POST">  {% csrf_token %}
 
     <table>
 
-        {{form.as_table}}
+        {{formulario.as_p}}
 
     </table>
 
