--- a/AppMaterias/templates/AppMaterias/about.html
+++ b/AppMaterias/templates/AppMaterias/about.html
@@ -7,6 +7,8 @@
 {% block body %}
     <h1>Acerca de Fede y Guada</h1>
 
+    <center><img src="https://static.vecteezy.com/system/resources/previews/002/713/936/non_2x/a-man-and-a-woman-are-sitting-at-a-table-and-having-a-meeting-hand-drawn-style-design-illustrations-vector.jpg" width="500" wide="500"></center>
+
 {% endblock body %}
 
 
