--- a/AppMaterias/templates/AppMaterias/padre.html
+++ b/AppMaterias/templates/AppMaterias/padre.html
@@ -18,17 +18,17 @@
     <body>
 
         <!-- Responsive navbar-->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-info">
             <div class="container">
-                <a class="navbar-brand" href="{% url 'Inicio' %}">Home</a>
+                <a class="navbar-brand" href="{% url 'Inicio' %}">Inicio</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-auto">
 
         
                         <li class="nav-item"><a class="nav-link" href="{% url 'Acerca de mí' %}">Acerca de nosotros</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'Añadir Materias' %}">Materias aprobadas</a></li>
-                        <li class="nav-item"><a class="nav-link "  href="{% url 'Añadir Materia' %}">Agregar Materias</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'Materias' %}">Materias aprobadas</a></li>
+                        <li class="nav-item"><a class="nav-link "  href="{% url 'Añadir Oferta Calificada' %}">Agregar Oferta Calificada</a></li>
                         {% if not user.is_authenticated %}
                         <li class="nav-item"><a class="nav-link active" aria-current="page"  href="{% url 'Register' %}">Registrarse</a></li>
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'Login' %}">Iniciar Sesión</a></li>
@@ -36,6 +36,26 @@
 
                         {% if user.is_authenticated %}
                         <p style="color:white">Hola, {{user.username}}!</p>
+                        
+                        
+
+                        {% with user.avatar_set.first as miAvatar %}
+
+                        {% if miAvatar%}
+
+                        <img src="{{miAvatar.imagen.url}}" alt="No encontro la imagen" style="max-width: 50px;">
+                        
+
+                        {% endif %}
+
+                        {% if not miAvatar %}
+                        
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'Avatar' %}">Agregar Avatar</a></li>
+
+                        {% endif %}
+
+                        {% endwith %}
+
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'Editar Usuario' %}">Editar Usuario</a></li>
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'Logout' %}">Cerrar sesión</a></li>
                         {% endif %}
@@ -52,6 +72,7 @@
                     {% endblock body %}
                 </div>
             </div>
+            
         </header>
         <!-- Page content-->
         <div class="container">
@@ -60,16 +81,39 @@
                 <div class="col-lg-8">
 
                     {% block reseñas %}
-                    {% endblock %}
+                    {% endblock reseñas %}
 
                 </div>
             </div>
         </div>
-
-
-        <!-- Footer-->
-        <footer class="py-5 bg-dark">
-            <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2022</p></div>
+         <!-- Footer-->
+        <footer class="py-5 bg-info">
+            <div class="container">
+                <div class="row">
+                    <!-- Footer Location-->
+                    <div style="color: white" class="col-lg-4 mb-5 mb-lg-0">
+                        <h4 class="text-uppercase mb-4">Ubicacion</h4>
+                        <p class="lead mb-0">
+                            Buenos Aires, Argentina
+                            <br />
+                            Ciudad Autonoma de Buenos Aires
+                        </p>
+                    </div>
+                    <!-- Footer Social Icons-->
+                    <div style="color: white" class="col-lg-4 mb-5 mb-lg-0">
+                        <h4 class="text-uppercase mb-4"></h4>
+                    </div>
+                    <!-- Footer About Text-->
+                    <div style="color: white" class="col-lg-4">
+                        <h4 class="text-uppercase mb-4">Sobre Nosotros</h4>
+                        <p class="lead mb-0">
+                            Github: <a href="https://github.com/GuadaCosen" style="color:aliceblue">Guadalupe Lucila Cosenzo</a><br><a href="https://github.com/FedericoASegui" style="color:aliceblue">Federico Agustin Segui</a>
+                            <br>
+                            Linkedin: <a href="https://www.linkedin.com/in/guada-cosenzo/" style="color:aliceblue">Guadalupe Lucila Cosenzo</a><br><a href="https://www.linkedin.com/in/federico-agust%C3%ADn-segui-978b12242/" style="color:aliceblue">Federico Agustin Segui</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
